--- a/content/faq/faq.txt
+++ b/content/faq/faq.txt
@@ -1,16 +1,21 @@
 Title: FAQ
 ----
-questions:
-  - question: "Is this course available for international students?"
-    answer: "Yes! Currently, this course is split between the Dutch version and an exchange-friendly English version."
-  - question: "What computer do I need?"
-    answer: "You will need a computer that meets the following requirements..."
-  - question: "What are my internship possibilities?"
-    answer: "Yes, there are various internship opportunities available throughout the course."
-  - question: "What if I have special needs?"
-    answer: "We offer support services for students with special needs..."
-  - question: "How can we get to campus (and are there any housing possibilities/dormitories)?"
-    answer: "The campus is well-connected by public transport, and we also offer housing options for students."
-  - question: "Can we go on exchange programs through this course?"
-    answer: "Yes, students are eligible for exchange programs with partner universities."
-
+Questions:
+- 
+  question: "Is this course available for internation students ?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
+- 
+  question: "What computer do I need?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
+- 
+  question: "What are my internship possibilities ?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
+- 
+  question: "What if I have special needs ?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
+- 
+  question: "How can we get to campus (and are there any housing possibilities/dormitories) ?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
+  - 
+  question: "Can we go on exchange proograms through this course ?"
+  answer: "Yes! Currently this course is split between the Dutch version and an exchange-friendy English version."
